initial HTML is now rendered at client
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4022

--- a/war/sametimed.css
+++ b/war/sametimed.css
@@ -115,6 +115,7 @@ form#add-client-form button {
 	color: #666;
 }
 
+.wave-client ol.inbox, 
 .wave-client ul.userlist {
 	list-style-type: none;
 }
