a big big refactoring (main action: splitting WavesClient into several classes)
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4028

--- a/war/sametimed-colored.css
+++ b/war/sametimed-colored.css
@@ -176,7 +176,8 @@ form#add-client-form button {
     color: #ccc;
     display: block;
     width: 100px;    
-    overflow: hidden;   
+    max-height: 12px;    
+    overflow: hidden;       
 }
 
 
