working with editor, as separate module
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4044

--- a/WebContent/sametimed-colored.css
+++ b/WebContent/sametimed-colored.css
@@ -102,7 +102,7 @@ form#add-client-form button {
     height: 150px;
 }
 
-.wave-client .inbox, .wave-client .userlist {
+.wave-client .inbox, .wave-cl69ient .userlist {
     width: 100px;   
 }
 
@@ -232,7 +232,17 @@ form#add-client-form button {
 .wave-client .chat .chat-line .author {
     color: #393;
     margin-right: 4px;
-} 
+}
+
+/* Editor styles */
+
+.wave-client .editor .editor-document {
+	width: 99%;
+	height: 75%;
+	overflow: auto;
+	border: 1px solid #ccc;
+	padding-right: 3px;
+}
 
 /* Editor buttons styles */
 
