now documents working with tags and use tags in the cursors; fixed console-client synchronization, now cursors are more intuitive and act more transparently
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4045

--- a/WebContent/sametimed-colored.css
+++ b/WebContent/sametimed-colored.css
@@ -102,7 +102,7 @@ form#add-client-form button {
     height: 150px;
 }
 
-.wave-client .inbox, .wave-cl69ient .userlist {
+.wave-client .inbox, .wave-client .userlist {
     width: 100px;   
 }
 
